# satellite-resource-optimizer

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.ui  NOTES.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
src/satsim/: __init__.py  bus.py  cli.py  config.py  demand.py  experiment.py  loop.py  resilience.py  rng.py  scenarios.py  scoring.py  settings.py
src/satsim/adapters/: __init__.py  admission.py  constellation.py  emergency.py  mac.py  optimizer.py  regulatory.py  request_source.py  scheduler.py  telemetry.py
src/satsim/adapters/admission/: __init__.py  emergency.py
src/satsim/adapters/io/: __init__.py
src/satsim/adapters/mac/: __init__.py
src/satsim/adapters/network/: __init__.py
src/satsim/adapters/optimization/: __init__.py
src/satsim/adapters/scheduling/: __init__.py  scheduler.py
src/satsim/domain/: __init__.py  enums.py  models.py  planning.py  telemetry.py
src/satsim/ports/: __init__.py  admission.py  constellation.py  optimizer.py  regulatory.py  request_source.py  scheduler.py  telemetry.py
src/satsim/runtime/: __init__.py  cli.py  experiment.py  loop.py
src/satsim/scenarios/: __init__.py  catalog.py
tests/: conftest.py  test_adapters.py  test_admission.py  test_config.py  test_contention.py  test_domain.py  test_emergency.py  test_experiment.py  test_loop.py  test_mac.py  test_optimizer.py  test_ports.py  test_resilience.py  test_rng_and_cli.py  test_scenarios.py  test_scheduler.py  test_scoring.py  test_settings.py  test_streamlit_app.py
